# soap_bar_rrt

./: CMakeLists.txt  README.md  package.xml
multi_contact_planning/: .gitignore  CMakeLists.txt  README.md  package.xml  point_cloud.bag
multi_contact_planning/PlanningData/: logMCP.txt  logNSPG.txt  qList.txt  qList_2.txt  qList_updated.txt  sigmaList.txt  sigmaList_1.txt  sigmaList_updated.txt
multi_contact_planning/Simulations/Round1/LadderClimbing/: logMCP0.txt  logMCP1.txt  logMCP10.txt  logMCP11.txt  logMCP12.txt  logMCP13.txt  logMCP14.txt  logMCP15.txt  logMCP16.txt  logMCP17.txt  logMCP18.txt  logMCP2.txt  logMCP3.txt  logMCP4.txt  logMCP5.txt  logMCP6.txt  logMCP7.txt  logMCP8.txt  logMCP9.txt  qList0.txt  qList10.txt  qList11.txt  qList12.txt  qList15.txt  qList16.txt  (+14 more)
multi_contact_planning/Simulations/climbing/: logMCP.txt  logNSPG.txt  qList.txt
multi_contact_planning/Simulations/phase1/: logMCP.txt  logNSPG.txt  qList.txt  sigmaList.txt
multi_contact_planning/Simulations/phase2/: logMCP.txt  logNSPG.txt  qList.txt  sigmaList.txt
multi_contact_planning/bindings/python/: CMakeLists.txt  constraints.cpp  multi_contact_planning.cpp  validity_check.cpp  visual_tools.cpp
multi_contact_planning/climbing/: qList.txt  sigmaList.txt
multi_contact_planning/climbing/phase0/: qList.txt  sigmaList.txt
multi_contact_planning/climbing/phase1/: qList.txt  sigmaList.txt
multi_contact_planning/demo_standing_up/: arturo_demo.py  cartesian_interface_solver.py  cogimon.py  cs_debug.py  gazebo_robot_handler.py  goal_sampler.py  loader.py  main.py  manifold.py  q_connector.py  q_goal.csv  solution.csv  solution.txt  solution_phase0.csv  solution_phase2.txt  solution_phase_2_.txt  xbot_mode_handler.py  xbot_stiffness_damping.py
multi_contact_planning/examples/: CMakeLists.txt
multi_contact_planning/examples/launch/: coman_forza_giusta.launch  comanplus_self_collision.launch  connector_test.launch  control_stability_test.launch  example_comanplus_manipulation.launch  example_mesh.launch  example_teleop.launch  example_teleop_attached_obj.launch  ft_est.launch  utils.launch
multi_contact_planning/examples/python/: centauro_manipulation.ipynb  notebook.rviz  phase1.py  simple_2d_example.ipynb  teleop_cartesian_constraint.ipynb  teleop_example.ipynb  teleop_goal_generation.ipynb
multi_contact_planning/examples/utils/: space_table.stl
multi_contact_planning/ladder/free_yaw/: qList.txt  sigmaList.txt
multi_contact_planning/ladder/yaw_constrained/: qList.txt  sigmaList.txt
multi_contact_planning/log/: checks_log__0_2021_08_31__14_51_31.mat  logger.m  plot_torque_reference.m  plot_wrenches.m
multi_contact_planning/msg/: CartesianTrajectory.msg  CartesioPlannerGoalStatus.msg  CartesioPlannerStatus.msg  SetContactFrames.msg
multi_contact_planning/phase0/: qList.txt  sigmaList.txt  solution_final.csv
multi_contact_planning/phase0+/: qList.txt  sigmaList.txt  solution_final.csv
multi_contact_planning/phase1/: logMCP.txt  qList.txt  sigmaList.txt
multi_contact_planning/phase1/#2/: qList.txt  sigmaList.txt
multi_contact_planning/phase1/#3/: qList.txt  sigmaList.txt
multi_contact_planning/phase1/with_obstacle/: qList.txt  sigmaList.txt
multi_contact_planning/phase1/with_obstacle_3/: qList.txt  sigmaList.txt
multi_contact_planning/phase1/with_obstacle_4/: logMCP.txt  qList.txt  sigmaList.txt
multi_contact_planning/phase2/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#2/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#3/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#4/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#5/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#6/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#7/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/#8/: qList.txt  sigmaList.txt
multi_contact_planning/phase2/Paolo/: sigmaList.txt
multi_contact_planning/phase2/double_support/: qList_updated.txt  sigmaList.txt
multi_contact_planning/planning_data/: qList.txt  sigmaList.txt
multi_contact_planning/src/: ompl_test_control.cpp  planning_scene_publisher.cpp  state_wrapper.cpp  state_wrapper.h
multi_contact_planning/src/constraints/: cartesian_constraint.cpp  cartesian_constraint.h
multi_contact_planning/src/goal/: NSPG.cpp  NSPG.h  goal_sampler.cpp  goal_sampler.h
multi_contact_planning/src/ik/: position_ik_solver.cpp  position_ik_solver.h
multi_contact_planning/src/nodes/: collision_check.cpp.orig  goal_generation.cpp  goal_generation.h  logger.cpp  planner_executor.cpp  planner_executor.cpp.orig  planner_executor.h  planner_executor.h.orig  planner_executor_main.cpp  previewer.cpp  self_collision_robot.cpp  trajectory_viewer.cpp
multi_contact_planning/src/planner/: cartesian_trajectory_interpolation.cpp  cartesian_trajectory_interpolation.h  cartesio_ompl_planner.cpp  cartesio_ompl_planner.h  state_wrapper.cpp.orig  trajectory_interpolation.cpp  trajectory_interpolation.h
multi_contact_planning/src/propagators/: RK1.h
multi_contact_planning/src/test_nodes/: centroidal_statics_test.cpp  control_stability_test.cpp  goal_generation_test.cpp  point_cloud_test.cpp  stability_test.cpp
multi_contact_planning/src/utils/: logging.h  octomap_collision_main.cpp  parse_yaml_utils.h  point_cloud_manager.cpp  point_cloud_manager.h  robot_viz.cpp  robot_viz.h
multi_contact_planning/src/validity_checker/: validity_checker_context.cpp  validity_checker_context.h  validity_checker_factory.cpp  validity_checker_factory.h  validity_predicate_aggregate.cpp  validity_predicate_aggregate.h
multi_contact_planning/srv/: CartesioGoal.srv  CartesioPlanner.srv  StiffnessDamping.srv
multi_contact_planning/tests/: CMakeLists.txt  test_basics.cpp  test_manifold.cpp  test_projection.cpp  test_trajectory.cpp
multi_contact_planning/tests/configs/: cogimon.srdf  cogimon.urdf  teleop.srdf  teleop.urdf
multi_contact_planning/wall_climbing/phase0/: qList.txt  sigmaList.txt  solution_phase0.txt
multi_contact_planning/wall_climbing/phase1/: qList.txt  sigmaList.txt
(+517 files in other folders)
